feat(concurrency): Add first failing test
Trying to concurrently claim a resource returns an error.
In the future this will take a timeout and the erorr only should come
after timeout.

Refs: VOID

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
+futures = "0.3"
 hyper = "1.8.1"
