--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ url = "1.7.2"
 hyper = { version = "1.8.1", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
