chore(client): clone server to client
Refs: VOID

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "rp"
 version = "0.1.0"
 edition = "2024"
+[[bin]]
+name = "server"
+path = "src/server/bin/main.rs"
+
+[[bin]]
+name = "client"
+path = "src/client/bin/main.rs"
+
 [toolchain]
 channel = "nightly-2025-12-08"
 components = ["rustfmt", "clippy", "rust-analyzer"]
