--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ hyper-util = { version = "0.1", features = ["full"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
+clap = { version = "4.5.53", features = ["derive", "string"] }
