--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,5 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 clap = { version = "4.5.53", features = ["derive", "string"] }
+serde-saphyr = "0.0.11"
+derivative = "2.2.0"
