--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ serde_yaml = "0.9"
 clap = { version = "4.5.53", features = ["derive", "string"] }
 serde-saphyr = "0.0.11"
 derivative = "2.2.0"
+itertools = "0.14.0"
