--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ futures = "0.3"
 url = "1.7.2"
 hyper = { version = "1.8.1", features = ["full"] }
 http-body-util = "0.1"
+http= "1.3"
 hyper-util = { version = "0.1", features = ["full"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -34,3 +35,4 @@ clap = { version = "4.5.53", features = ["derive", "string"] }
 serde-saphyr = "0.0.11"
 derivative = "2.2.0"
 itertools = "0.14.0"
+thiserror = "1.0"
